# foreign_coins

./: LICENSE  README.md  pyproject.toml
src/foreign_coins/: conversion_api.py  scraping.py
