[project]
name = "foreign-coins"
version = "0.1.0"
description = ""
authors = [
    {name = "ericakn",email = "erica.k.nishimura@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "foreign_coins", from = "src"}]

[tool.poetry.scripts]
api = 'src.foreign_coins.conversion_api:main'
scraping = 'src.foreign_coins.scraping:main'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
